# rust

./: .gitignore  .gitmodules  .travis.yml  README.md  main.rs
contest/: Cargo.toml
contest/src/: lib.rs  math.rs  vec.rs
data/: Cargo.toml
data/src/: union_find.rs
flattener/: flattener.rb
guessing_game/: Cargo.toml
lib/: Cargo.toml
sandbox/: Cargo.toml
solutions/: Cargo.toml
solutions/atcoder/agc016/: Cargo.toml
solutions/atcoder/agc016/src/: a.rs  b.rs  c.rs  e.rs
solutions/atcoder/agc017/: Cargo.toml
solutions/atcoder/agc017/src/: a.rs  b.rs  d.rs
solutions/atcoder/arc075/: Cargo.toml
solutions/atcoder/arc075/src/: c.rs  e.rs  f.rs
solutions/atcoder/arc078/: Cargo.toml
solutions/atcoder/arc078/src/: c.rs  d.rs  e.rs
solutions/atcoder/arc083/c/src/: main.rs
solutions/atcoder/arc083/d/: Cargo.toml
solutions/atcoder/arc083/d/src/: main.rs
solutions/atcoder/arc100/: Cargo.toml
solutions/atcoder/arc100/src/: c.rs  d.rs  e.rs
solutions/atcoder/caddi2019/: Cargo.toml
solutions/atcoder/caddi2019/src/: .judge.rs.rustfmt  judge.sh  main.rs  memo.md  out.txt  results.txt  run.sh
solutions/atcoder/caddi2019/src/example/: in.txt  out.txt  solver.cpp
solutions/atcoder/tdpc/a/: Cargo.toml
solutions/atcoder/tdpc/a/src/: main.rs
solutions/cf/722_c/: Cargo.toml
solutions/cf/722_c/src/: main.rs
solutions/codejam/16_1a/: Cargo.toml  a.rs  b.rs  c.rs
solutions/codejam/16_1a/src/: a.rs  b.rs  c.rs
solutions/fhc/: Cargo.toml
solutions/fhc/17r1/: beach_umbrellas.txt  d.rs
solutions/fhc/src/17r1/: beach_umbrellas.out  d.rs
(+26 files in other folders)
